OH THE PEARLY PEARLS OF PEARLLLL

--- a/21secrets/index.html
+++ b/21secrets/index.html
@@ -492,6 +492,51 @@
 
 
 
+<div id="eleven" class="photo">
+  <h1> </h1>
+</div>
+
+<div id="onze" class="text"> <p>A Every time you sneeze, some creature in a parallel universe sneezes at the exact same time. This phenomenon is a result of gravity, how this works we do not know yet. Everything in the everywhere is connected. Even the nowhere and the everywhere are connected. Connectivity. Unity. Life. Universes.</p>
+<ul id="menu2">
+<li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
+	<ul>
+		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
+		<li><a href="#two"><img src="images/nav2.png" alt="1"></a></li>
+		<li><a href="#three"><img src="images/nav3.png" alt="1"></a></li>
+		<li><a href="#four"><img src="images/nav4.png" alt="1"></a></li>
+		<li><a href="#five"><img src="images/nav5.png" alt="1"></a></li>
+		<li><a href="#six"><img src="images/nav6.png" alt="1"></a></li>
+		<li><a href="#seven"><img src="images/nav7.png" alt="1"></a></li>
+		<li><a href="#eight"><img src="images/nav8.png" alt="1"></a></li>
+		<li><a href="#nine"><img src="images/nav9.png" alt="1"></a></li>
+		<li><a href="#ten"><img src="images/nav10.png" alt="1"></a></li>
+		<li><a href="#eleven"><img src="images/nav11.png" alt="1"></a></li>
+		<li><a href="#twelve"><img src="images/nav12.png" alt="1"></a></li>
+		<li><a href="#thirteen"><img src="images/nav13.png" alt="1"></a></li>
+		<li><a href="#fourteen"><img src="images/nav14.png" alt="1"></a></li>
+		<li><a href="#fifteen"><img src="images/nav15.png" alt="1"></a></li>
+		<li><a href="#sixteen"><img src="images/nav16.png" alt="1"></a></li>
+		<li><a href="#seventeen"><img src="images/nav17.png" alt="1"></a></li>
+		<li><a href="#eighteen"><img src="images/nav18.png" alt="1"></a></li>
+		<li><a href="#nineteen"><img src="images/nav19.png" alt="1"></a></li>
+		<li><a href="#twenty"><img src="images/nav20.png" alt="1"></a></li>
+		<li><a href="#twentyone"><img src="images/nav21.png" alt="1"></a></li>
+	</ul>
+</li></ul></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <div id="twelve" class="photo">
@@ -635,6 +680,144 @@
 
 
 
+<div id="fifteen" class="photo">
+  <h1> </h1>
+</div>
+
+<div id="quinze" class="text"> <p>When god cries from happiness, he cries hot chocolate. There are special angelic miners that collect the tears and give it to his favourite creatures: humans. This is God's greatest gift to humans other than friendship and family -that turns out to be actually pretty great-, and chosen family in case your real family sucks, or you just want all the awesome families you can get and one decent family isn't enough. Family or no family, you will always have hot chocolate.</p>
+<ul id="menu2">
+<li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
+	<ul>
+		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
+		<li><a href="#two"><img src="images/nav2.png" alt="1"></a></li>
+		<li><a href="#three"><img src="images/nav3.png" alt="1"></a></li>
+		<li><a href="#four"><img src="images/nav4.png" alt="1"></a></li>
+		<li><a href="#five"><img src="images/nav5.png" alt="1"></a></li>
+		<li><a href="#six"><img src="images/nav6.png" alt="1"></a></li>
+		<li><a href="#seven"><img src="images/nav7.png" alt="1"></a></li>
+		<li><a href="#eight"><img src="images/nav8.png" alt="1"></a></li>
+		<li><a href="#nine"><img src="images/nav9.png" alt="1"></a></li>
+		<li><a href="#ten"><img src="images/nav10.png" alt="1"></a></li>
+		<li><a href="#eleven"><img src="images/nav11.png" alt="1"></a></li>
+		<li><a href="#twelve"><img src="images/nav12.png" alt="1"></a></li>
+		<li><a href="#thirteen"><img src="images/nav13.png" alt="1"></a></li>
+		<li><a href="#fourteen"><img src="images/nav14.png" alt="1"></a></li>
+		<li><a href="#fifteen"><img src="images/nav15.png" alt="1"></a></li>
+		<li><a href="#sixteen"><img src="images/nav16.png" alt="1"></a></li>
+		<li><a href="#seventeen"><img src="images/nav17.png" alt="1"></a></li>
+		<li><a href="#eighteen"><img src="images/nav18.png" alt="1"></a></li>
+		<li><a href="#nineteen"><img src="images/nav19.png" alt="1"></a></li>
+		<li><a href="#twenty"><img src="images/nav20.png" alt="1"></a></li>
+		<li><a href="#twentyone"><img src="images/nav21.png" alt="1"></a></li>
+	</ul>
+</li></ul></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id="sixteen" class="photo">
+  <h1> </h1>
+</div>
+
+<div id="seize" class="text"> <p>Theres a mexican owl that knows the answer to every question but answers only in crossword puzzle riddles.</p>
+<ul id="menu2">
+<li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
+	<ul>
+		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
+		<li><a href="#two"><img src="images/nav2.png" alt="1"></a></li>
+		<li><a href="#three"><img src="images/nav3.png" alt="1"></a></li>
+		<li><a href="#four"><img src="images/nav4.png" alt="1"></a></li>
+		<li><a href="#five"><img src="images/nav5.png" alt="1"></a></li>
+		<li><a href="#six"><img src="images/nav6.png" alt="1"></a></li>
+		<li><a href="#seven"><img src="images/nav7.png" alt="1"></a></li>
+		<li><a href="#eight"><img src="images/nav8.png" alt="1"></a></li>
+		<li><a href="#nine"><img src="images/nav9.png" alt="1"></a></li>
+		<li><a href="#ten"><img src="images/nav10.png" alt="1"></a></li>
+		<li><a href="#eleven"><img src="images/nav11.png" alt="1"></a></li>
+		<li><a href="#twelve"><img src="images/nav12.png" alt="1"></a></li>
+		<li><a href="#thirteen"><img src="images/nav13.png" alt="1"></a></li>
+		<li><a href="#fourteen"><img src="images/nav14.png" alt="1"></a></li>
+		<li><a href="#fifteen"><img src="images/nav15.png" alt="1"></a></li>
+		<li><a href="#sixteen"><img src="images/nav16.png" alt="1"></a></li>
+		<li><a href="#seventeen"><img src="images/nav17.png" alt="1"></a></li>
+		<li><a href="#eighteen"><img src="images/nav18.png" alt="1"></a></li>
+		<li><a href="#nineteen"><img src="images/nav19.png" alt="1"></a></li>
+		<li><a href="#twenty"><img src="images/nav20.png" alt="1"></a></li>
+		<li><a href="#twentyone"><img src="images/nav21.png" alt="1"></a></li>
+	</ul>
+</li></ul></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id="seventeen" class="photo">
+  <h1> </h1>
+</div>
+
+<div id="dixsept" class="text"> <p>When the devil cries, his tears are coffee, coca-cola, crystal meth, mentos, and heroin mixed together to form a super serum of things that will mess you up permanently. You will not come back from drinking satan's tears.</p>
+<ul id="menu2">
+<li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
+	<ul>
+		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
+		<li><a href="#two"><img src="images/nav2.png" alt="1"></a></li>
+		<li><a href="#three"><img src="images/nav3.png" alt="1"></a></li>
+		<li><a href="#four"><img src="images/nav4.png" alt="1"></a></li>
+		<li><a href="#five"><img src="images/nav5.png" alt="1"></a></li>
+		<li><a href="#six"><img src="images/nav6.png" alt="1"></a></li>
+		<li><a href="#seven"><img src="images/nav7.png" alt="1"></a></li>
+		<li><a href="#eight"><img src="images/nav8.png" alt="1"></a></li>
+		<li><a href="#nine"><img src="images/nav9.png" alt="1"></a></li>
+		<li><a href="#ten"><img src="images/nav10.png" alt="1"></a></li>
+		<li><a href="#eleven"><img src="images/nav11.png" alt="1"></a></li>
+		<li><a href="#twelve"><img src="images/nav12.png" alt="1"></a></li>
+		<li><a href="#thirteen"><img src="images/nav13.png" alt="1"></a></li>
+		<li><a href="#fourteen"><img src="images/nav14.png" alt="1"></a></li>
+		<li><a href="#fifteen"><img src="images/nav15.png" alt="1"></a></li>
+		<li><a href="#sixteen"><img src="images/nav16.png" alt="1"></a></li>
+		<li><a href="#seventeen"><img src="images/nav17.png" alt="1"></a></li>
+		<li><a href="#eighteen"><img src="images/nav18.png" alt="1"></a></li>
+		<li><a href="#nineteen"><img src="images/nav19.png" alt="1"></a></li>
+		<li><a href="#twenty"><img src="images/nav20.png" alt="1"></a></li>
+		<li><a href="#twentyone"><img src="images/nav21.png" alt="1"></a></li>
+	</ul>
+</li></ul></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <div id="eighteen" class="photo">
@@ -762,6 +945,52 @@
 	</ul>
 </li></ul></div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id="twentyone" class="photo">
+  <h1> </h1>
+</div>
+
+<div id="vingtetun" class="text"> <p>When a girl with the name of Gabby turns twenty one from the state of Oklahoma in a year that is a multiple of 5, a baby unicorn glitter making robot is born in the north pole. Is Gabby's survival of 21 years a result of the unicorn? or Is the unicorn th result of Gabby turning 21.</p>
+<ul id="menu2">
+<li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
+	<ul>
+		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
+		<li><a href="#two"><img src="images/nav2.png" alt="1"></a></li>
+		<li><a href="#three"><img src="images/nav3.png" alt="1"></a></li>
+		<li><a href="#four"><img src="images/nav4.png" alt="1"></a></li>
+		<li><a href="#five"><img src="images/nav5.png" alt="1"></a></li>
+		<li><a href="#six"><img src="images/nav6.png" alt="1"></a></li>
+		<li><a href="#seven"><img src="images/nav7.png" alt="1"></a></li>
+		<li><a href="#eight"><img src="images/nav8.png" alt="1"></a></li>
+		<li><a href="#nine"><img src="images/nav9.png" alt="1"></a></li>
+		<li><a href="#ten"><img src="images/nav10.png" alt="1"></a></li>
+		<li><a href="#eleven"><img src="images/nav11.png" alt="1"></a></li>
+		<li><a href="#twelve"><img src="images/nav12.png" alt="1"></a></li>
+		<li><a href="#thirteen"><img src="images/nav13.png" alt="1"></a></li>
+		<li><a href="#fourteen"><img src="images/nav14.png" alt="1"></a></li>
+		<li><a href="#fifteen"><img src="images/nav15.png" alt="1"></a></li>
+		<li><a href="#sixteen"><img src="images/nav16.png" alt="1"></a></li>
+		<li><a href="#seventeen"><img src="images/nav17.png" alt="1"></a></li>
+		<li><a href="#eighteen"><img src="images/nav18.png" alt="1"></a></li>
+		<li><a href="#nineteen"><img src="images/nav19.png" alt="1"></a></li>
+		<li><a href="#twenty"><img src="images/nav20.png" alt="1"></a></li>
+		<li><a href="#twentyone"><img src="images/nav21.png" alt="1"></a></li>
+	</ul>
+</li></ul></div>
 
 
 
