--- a/21secrets/index.html
+++ b/21secrets/index.html
@@ -1001,6 +1001,17 @@
 
 
 
+
+<div id="end" class="endphoto">
+  <h1> </h1>
+</div>
+
+
+
+
+<!--y que tal? --aha -->
+
+
 <!--
 <div id="slide1" class="slide">
   <div class="title">
