what am i doinggggggg

--- a/21secrets/index.html
+++ b/21secrets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HappyBday Gabbs!</title>
@@ -29,13 +29,13 @@
   
   
 <div id="one" class="photo">
-  <h1> <a id="one"></a> </h1>
+  <h1> <a id="one"> </a> </h1>
 </div>
 
 
 <div id="un" class="text"> <p>When humans turn 21, if they are found to be worthy, they will be awarded the 21 secrets of the universe. If you are reading this now on your 21st birthday... You are worthy. Congratulations! </p>
 <ul tabindex="0" id="menu2">
-<li><a href="#"><img src="images/miniburger.png" hieght="20px" alt="Secrets Menu">
+<li><a href="#"><img src="images/miniburger.png" alt="Secrets Menu">
 	<ul class="numbers">
 		<li><a href="#one"><img src="images/nav1.png" alt="1"></a></li>
 		<li><a href="#two"><img src="images/nav2.png" alt="2"></a></li>
