--- a/inkpress/index.html
+++ b/inkpress/index.html
@@ -21,7 +21,7 @@
 			<nav>
 			<ul>
 				<li><a href="">Company</a></li>
-				<li><a href="">Products</a></li>
+				<li><a href="">Services</a></li>
 				<li><a href="">Installations</a></li>
 				<li><a href="">Manufacturing</a></li>
 				<li><a href="">Contact</a></li>
