IM A MAGICAL BABY CACTUS SUNFLOWER
IN A SEA OF MACARONIIIII

--- a/inkpress/index.html
+++ b/inkpress/index.html
@@ -13,142 +13,14 @@
 
 
 <body>
-	<div class="navbar">
-		<div class="logo-spot">
-		<img src="images/inkpress.png" alt="Inkpress" class="logo">
-		</div>
-		<div class="menu">
-			<nav>
-			<ul>
-				<li><a href="">Company</a></li>
-				<li><a href="">Services</a></li>
-				<li><a href="">Installations</a></li>
-				<li><a href="">Manufacturing</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-			</nav>
-		</div>
+	<div class="logolarge">
+		<img src="images/inkpress.png" alt="inkpress">
 	</div>
-
-
-
-
-  <div class="parallax">
-    <div id="group1" class="parallax__group">
+	<p> selecciona tu idioma
+	<div class="languages">
+		<img src="images/MEX.png" alt="espanol" class="flags">
+		<img src="images/EU.png" alt="ingles" class="flags">
+	</div>
 	
-        <div class="title">
-			<h1>About Inkpress</h1>
-			<div class="about-photos">
-				<img src="images/somos02.png" alt="photo of someone">
-				<img src="images/somos03.png" alt="photo of someone">
-			</div>
-			<div class="about-info">
-				<p class="firstpar">
-Inkpress is a company dedicated to the graphic arts, in which, we are committed every day with each of our clients to offer a service based on three fundamental aspects:
-</p>
-<h6>
-Punctuality,
-Honesty,
-Confidence
-</h6>
-<p class="secondpar">
-Our printing processes is careful to ensure the highest quality and timely delivery of our work. 
-</p><p class="secondpar">
-Inkpress has a team of highly qualified professionals, committed to the highest quality and customer satisfaction, providing products that offer great impact for the consumer.
-				</p>
-			</div>
-		</div>
-    </div>
-	
-
-
-	
-    <div id="group2" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">
-		<h1>Our Customers</h1>
-			<p>Inkpress keeps big interest in each project big or small,
-allowing us to have and maintain a broad portfolio of
-clients who put their trust in us.</p>
-			<img src="images/aeromexico.gif" alt="aeromexico">
-			<img src="images/telcel.png" alt="telcel">
-			<img src="images/superama.png" alt="superama">
-			<img src="images/danone.jpg" alt="danone">
-			<img src="images/intel.png" alt="intel">
-			<img src="images/3m.jpg" alt="3M">
-			<img src="images/adidas.png" alt="adidas">
-			<img src="images/mini.jpg" alt="mini cooper">
-			<img src="images/hugo.png" alt="hugo boss">
-			<img src="images/clicquot.jpg" alt="vino">
-			<img src="images/nestlee.gif" alt="nestle">
-			<img src="images/nescafe.jpg" alt="nescafe">
-			<img src="images/mido.jpg" alt="mido">
-			<img src="images/palacio.png" alt="el palacio">
-			<img src="images/banamex.jpg" alt="banamex">
-			<img src="images/bosch.jpg" alt="bosch">
-			<img src="images/sharp.jpg" alt="sharp">
-			<img src="images/espn.jpg" alt="espn">
-			<img src="images/gandhi.jpg" alt="gandhi">
-			<img src="images/teleton.png" alt="teleton">
-		</div>
-      </div>
-    </div>
-
-
-	
-	
-    <div id="group3" class="parallax__group">
-		
-      <div class="parallax__layer parallax__layer--fore">
-        <div class="title">Foreground Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-	
-<!--	
-    <div id="group4" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--back">
-        <div class="title">Background Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--deep">
-        <div class="title">Deep Background Layer</div>
-      </div>
-    </div>
-	
-	
-    <div id="group5" class="parallax__group">
-      <div class="parallax__layer parallax__layer--fore">
-        <div class="title">Foreground Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-	
-	
-    <div id="group6" class="parallax__group">
-      <div class="parallax__layer parallax__layer--back">
-        <div class="title">Background Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-	
-	
-    <div id="group7" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-  </div>
-	
--->	
-	
-    </body>
+</body>
 </html>
