--- a/inkpress/company.html
+++ b/inkpress/company.html
@@ -7,7 +7,7 @@
     <title>Inkpress</title>
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>	
-<link rel="stylesheet" href="style 2.css" type="text/css" media="screen">
+<link rel="stylesheet" href="companystyle.css" type="text/css" media="screen">
   </head>
 
 
@@ -21,11 +21,11 @@
 		<div class="menu">
 			<nav>
 			<ul>
-				<li><a href="">Company</a></li>
-				<li><a href="">Services</a></li>
-				<li><a href="">Installations</a></li>
-				<li><a href="">Manufacturing</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a href="" class="menulink">Company</a></li>
+				<li><a href="" class="menulink">Services</a></li>
+				<li><a href="" class="menulink">Installations</a></li>
+				<li><a href="" class="menulink">Manufacturing</a></li>
+				<li><a href="" class="menulink">Contact</a></li>
 			</ul>
 			</nav>
 		</div>
@@ -68,6 +68,7 @@ Inkpress has a team of highly qualified professionals, committed to the highest 
 		<p>Inkpress keeps big interest in each project big or small,
 allowing us to have and maintain a broad portfolio of
 clients who put their trust in us.</p>
+		<div class="custimg"
 		<img src="images/aeromexico.gif" alt="aeromexico">
 		<img src="images/telcel.png" alt="telcel">
 		<img src="images/superama.png" alt="superama">
@@ -88,6 +89,7 @@ clients who put their trust in us.</p>
 		<img src="images/espn.jpg" alt="espn">
 		<img src="images/gandhi.jpg" alt="gandhi">
 		<img src="images/teleton.png" alt="teleton">
+		</div>
 	</div>
 	</div>
 
