HIS NAME IS SNUFFY HE IS A CLOWN YEAH what?

--- a/inkpress/company.html
+++ b/inkpress/company.html
@@ -57,12 +57,11 @@ Inkpress has a team of highly qualified professionals, committed to the highest 
 
 
 
-	<div class="empty"></div>
 
 
 
 	
-	<div id="group2" class="title">
+	<div id="group2">
 	<div class="innards">
 		<h1>Our Customers</h1>
 		<p>Inkpress keeps big interest in each project big or small,
@@ -92,20 +91,34 @@ clients who put their trust in us.</p>
 		</div>
 	</div>
 	</div>
-
 </div>
-	
-<!--	
-    <div id="group3" class="parallax__group">
-		
-      <div class="parallax__layer parallax__layer--fore">
-        <div class="title">Foreground Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
--->	
+
+
+
+	<div class="empty"></div>
+
+
+
+
+
+<div class="footer">
+	<div class="adress">
+	<p>No.2 Lago Wenner
+		<br>
+		Col. Pensil Norte
+		<br>
+		Mexico City, MEX
+		<br>
+		Telephone 52547687 or 84
+	</p>
+	</div>
+	<div class="copywrite">
+	<p class="copy">
+		&#169; Inkpress all rights reserved 2008
+	</p>
+	</div>
+</div>
+
 	
     </body>
 </html>
