--- a/inkpress/index.html
+++ b/inkpress/index.html
@@ -16,10 +16,10 @@
 	<div class="logolarge">
 		<img src="images/inkpress.png" alt="inkpress">
 	</div>
-	<p> selecciona tu idioma
+	<p> selecciona tu idioma</p>
 	<div class="languages">
 		<img src="images/MEX.png" alt="espanol" class="flags">
-		<img src="images/EU.png" alt="ingles" class="flags">
+		<a href="http://luciac.github.io/inkpress/company"><img src="images/EU.png" alt="ingles" class="flags"></a>
 	</div>
 	
 </body>
