A traditional christmas maniquin hunt!!!!

--- a/inkpress/empresa.html
+++ b/inkpress/empresa.html
@@ -14,7 +14,6 @@
 
 <body>
 <div class="back">
-
 	<div class="navbar">
 		<div class="logo-spot">
 		<img src="images/inkpress.png" alt="Inkpress" class="logo">
@@ -22,56 +21,36 @@
 		<div class="menu">
 			<nav>
 			<ul>
-				<li><a href="" class="menulink">Company</a></li>
-				<li><a href="" class="menulink">Services</a></li>
-				<li><a href="" class="menulink">Installations</a></li>
+				<li><a href="" class="menulink">Empresa</a></li>
+				<li><a href="" class="menulink">Servicios</a></li>
+				<li><a href="" class="menulink">Instalaciones</a></li>
 				<li><a href="" class="menulink">Manufacturing</a></li>
-				<li><a href="" class="menulink">Contact</a></li>
+				<li><a href="" class="menulink">Contacto</a></li>
 			</ul>
 			</nav>
 		</div>
 	</div>
-
-
-	
-	<div id="mobilemenu">
-	<div id="topbar">
-		<div class="floating"><img src="images/inkpress.png"><h1>Menu</h1></div>
-		<div id="tophiddenbar">
-			<ul>
-			<li><a href="">Company</a></li>
-			<li><a href="">Services</a></li>
-			<li><a href="">Installations</a></li>
-			<li><a href="">Manufacturing</a></li>										<li><a href="">Contact</a></li>
-			</ul>	
-		</div>
-	</div>
-	</div>
-	
-	
-	
-	
 	
 	<div id="group1" class="title">
 	<div class="innards">
-		<h1>About Inkpress</h1>
+		<h1>&#191;Qui&#233;nes somos?</h1>
 		<div class="about-photos">
 			<img src="images/somos02.png" alt="photo of someone">
 			<img src="images/somos03.png" alt="photo of someone">
 		</div>
 		<div class="about-info">
 			<p class="firstpar">
-Inkpress is a company dedicated to the graphic arts, in which, we are committed every day with each of our clients to offer a service based on three fundamental aspects:
+Inkpress es una empresa dedicada a las artes graficas, en la cual tenemos el compromiso día a día con cada uno de nuestros clientes de ofrecerles un servicio basado en tres aspectos fundamentales:
 </p>
 <h6>
-Punctuality,
-Honesty,
-Confidence
+Puntualidad,
+Honestidad,
+Confianza
 </h6>
 <p class="secondpar">
-Our printing processes is careful to ensure the highest quality and timely delivery of our work. 
+Nuestros procesos de impresión son cuidados al máximo con el fin de asegurar la más alta calidad y la entrega a tiempo de nuestros trabajos. 
 </p><p class="secondpar">
-Inkpress has a team of highly qualified professionals, committed to the highest quality and customer satisfaction, providing products that offer great impact for the consumer.
+Inkpress cuenta con un equipo de trabajo altamente calificado y comprometidos con la máxima calidad y satisfacción del cliente, proveyendo productos que ofrecen gran impacto para el consumidor.
 			</p>
 	</div>
 	</div>
@@ -84,7 +63,7 @@ Inkpress has a team of highly qualified professionals, committed to the highest 
 	
 	<div id="group2">
 	<div class="innards">
-		<h1>Our Customers</h1>
+		<h1>Nuestros Clientes</h1>
 		<p>Inkpress keeps big interest in each project big or small,
 allowing us to have and maintain a broad portfolio of
 clients who put their trust in us.</p>
@@ -112,7 +91,6 @@ clients who put their trust in us.</p>
 		</div>
 	</div>
 	</div>
-	
 </div>
 
 
