--- a/inkpress/company.html
+++ b/inkpress/company.html
@@ -8,6 +8,8 @@
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>	
 <link rel="stylesheet" href="companystyle.css" type="text/css" media="screen">
+    <script src='https://code.jquery.com/jquery-1.11.2.js'></script>
+
   </head>
 
 
@@ -36,7 +38,7 @@
 	
 	<div id="mobilemenu">
 	<div id="topbar">
-		<div class="floating"><img src="images/inkpress.png"><h1>Menu</h1></div>
+		<div class="floating" class="nav-height"><img src="images/inkpress.png"><button class="menubotton">Menu</button></div>
 		<div id="tophiddenbar">
 			<ul>
 			<li><a href="">Company</a></li>
@@ -141,6 +143,7 @@ clients who put their trust in us.</p>
 	</div>
 </div>
 
-	
-    </body>
+
+    <script src='main.js'></script>	
+</body>
 </html>
