looks like this one.... lost its head WHHHAAAA

--- a/inkpress/company.html
+++ b/inkpress/company.html
@@ -64,12 +64,11 @@
 		<div class="about-info">
 			<p class="firstpar">
 Inkpress is a company dedicated to the graphic arts, in which, we are committed every day with each of our clients to offer a service based on three fundamental aspects:
-</p>
-<h6>
+<span>
 Punctuality,
 Honesty,
-Confidence
-</h6>
+Confidence.
+</span></p>
 <p class="secondpar">
 Our printing processes is careful to ensure the highest quality and timely delivery of our work. 
 </p><p class="secondpar">
