--- a/inkpress/empresa.html
+++ b/inkpress/empresa.html
@@ -31,6 +31,27 @@
 		</div>
 	</div>
 	
+	
+	
+	<div id="mobilemenu">
+	<div id="topbar">
+		<div class="floating" class="nav-height"><img src="images/inkpress.png"><button class="menubotton">Menu</button></div>
+		<div id="tophiddenbar">
+			<ul>
+			<li><a href="">Company</a></li>
+			<li><a href="">Services</a></li>
+			<li><a href="">Installations</a></li>
+			<li><a href="">Manufacturing</a></li>										<li><a href="">Contact</a></li>
+			</ul>	
+		</div>
+	</div>
+	</div>
+	
+	
+	
+	
+	
+	
 	<div id="group1" class="title">
 	<div class="innards">
 		<h1>&#191;Qui&#233;nes somos?</h1>
