daddy was a cop... on the east side of chicago

--- a/inkpress/empresa.html
+++ b/inkpress/empresa.html
@@ -38,10 +38,10 @@
 		<div class="floating" class="nav-height"><img src="images/inkpress.png"><button class="menubotton">Menu</button></div>
 		<div id="tophiddenbar">
 			<ul>
-			<li><a href="">Company</a></li>
-			<li><a href="">Services</a></li>
-			<li><a href="">Installations</a></li>
-			<li><a href="">Manufacturing</a></li>										<li><a href="">Contact</a></li>
+			<li><a href="">Empresa</a></li>
+			<li><a href="">Servicios</a></li>
+			<li><a href="">Instalaciones</a></li>
+			<li><a href="">Manufacturing</a></li>										<li><a href="">Contacto</a></li>
 			</ul>	
 		</div>
 	</div>
@@ -62,12 +62,11 @@
 		<div class="about-info">
 			<p class="firstpar">
 Inkpress es una empresa dedicada a las artes graficas, en la cual tenemos el compromiso día a día con cada uno de nuestros clientes de ofrecerles un servicio basado en tres aspectos fundamentales:
-</p>
-<h6>
+<span>
 Puntualidad,
 Honestidad,
 Confianza
-</h6>
+</span></span>
 <p class="secondpar">
 Nuestros procesos de impresión son cuidados al máximo con el fin de asegurar la más alta calidad y la entrega a tiempo de nuestros trabajos. 
 </p><p class="secondpar">
