--- a/inkpress/index.html
+++ b/inkpress/index.html
@@ -18,7 +18,7 @@
 	</div>
 	<p> selecciona tu idioma</p>
 	<div class="languages">
-		<img src="images/MEX.png" alt="espanol" class="flags">
+		<a href="http://luciac.github.io/inkpress/empresa"><img src="images/MEX.png" alt="espanol" class="flags"></a>
 		<a href="http://luciac.github.io/inkpress/company"><img src="images/EU.png" alt="ingles" class="flags"></a>
 	</div>
 	
