--- a/inkpress/empresa.html
+++ b/inkpress/empresa.html
@@ -66,7 +66,7 @@ Inkpress es una empresa dedicada a las artes graficas, en la cual tenemos el com
 Puntualidad,
 Honestidad,
 Confianza
-</span></span>
+</span></p>
 <p class="secondpar">
 Nuestros procesos de impresión son cuidados al máximo con el fin de asegurar la más alta calidad y la entrega a tiempo de nuestros trabajos. 
 </p><p class="secondpar">
