--- a/inkpress/company.html
+++ b/inkpress/company.html
@@ -142,7 +142,7 @@ clients who put their trust in us.</p>
 	</div>
 </div>
 
-
+	<script src='https://code.jquery.com/jquery-1.11.2.js'></script>
     <script src='main.js'></script>	
 </body>
 </html>
