--- a/inkpress/empresa.html
+++ b/inkpress/empresa.html
@@ -139,7 +139,7 @@ clients who put their trust in us.</p>
 	</div>
 </div>
 
-
+	<script src='https://code.jquery.com/jquery-1.11.2.js'></script>
     <script src='main.js'></script>	
     </body>
 </html>
