--- a/inkpress/company.html
+++ b/inkpress/company.html
@@ -101,7 +101,7 @@ clients who put their trust in us.</p>
 		<img src="images/hugo.png" alt="hugo boss">
 		<img src="images/clicquot.jpg" alt="vino">
 		<img src="images/nestlee.gif" alt="nestle">
-		<img src="images/nescafe.jpg" alt="nescafe">
+		<img src="images/nescaf.jpg" alt="nescafe">
 		<img src="images/mido.jpg" alt="mido">
 		<img src="images/palacio.png" alt="el palacio">
 		<img src="images/banamex.jpg" alt="banamex">
