--- a/marvelousprocesss/index.html
+++ b/marvelousprocesss/index.html
@@ -68,7 +68,7 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 	<h2>Research</h2>
 	<h3>Information + Inspiration</h3>
 	<p>It was important to start collecting the facts that make up this magnificent world. As well as find out how other cinematic worlds handle this issue of representing their information. So I did three things. I scoured the internet for awesome websites, started watching all of the films over again, and made my "marvel sketchbook" to collect all of my findings. Starting from the front I collected data. Starting from the back I sketched inspiration. One day they will meet in the middle to form the final final product. </p>
-	<div>
+	<div class="images">
 		<img src="images/marvelsketch.jpg" alt="marvel sketchbook">
 		<img src="images/research-08.png" alt="marvel sketchbook">
 		<img src="images/research-04.png" alt="marvel sketchbook">
@@ -142,39 +142,39 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 	<h2>first concept</h2>
 	<h3>The initial sketching phase</h3>
 	<p>Here are the terrible first sketches I went through to get to the first tada moment. The following three are part of the first organization. Its the first full list, the hover statem and then full character profile.<br>This is also when I first attempted the colour pallet for franchises. I was definitely feeling that.</p>
-		<div>
+		<div class="images">
 		<img src="images/idea1a.jpg" alt="the full list">
 		<img src="images/idea1b.jpg" alt="the hover state">
 		<img src="images/idea1c.jpg" alt="the character profile">
 		<img src="images/idea2.jpg" alt="the character profile option 2">
 	</div>
 	<p>The following was the introduction of tabs. This was one of the original intents on tabed character profiles. I sort of liked it but not fully.</p>
-		<div>
+		<div class="images">
 		<img src="images/idea3a.jpg" alt="the full list">
 		<img src="images/idea3b.jpg" alt="the hover state">
 		<img src="images/idea3c.jpg" alt="the character profile">
 		</div>	
 	<p>Ideas for the character list choises changed. I tested the idea of duotones again here. but also tried to see how it worked without it. The Gif part was that once you select a person from the list, it opens up and plays a gif.</p>
-		<div>
+		<div class="images">
 		<img src="images/idea4a.jpg" alt="the full list">
 		<img src="images/idea4b.jpg" alt="the hover state">
 		<img src="images/idea4c.jpg" alt="the character profile">
 		</div>
 	<h3>The First aha moment</h3>
 	<p>Toying with tabs I finally arrived at this final design. The background was designed to subtly move while the png of the character and the text stayed the same.</p>
-		<div>
+		<div class="images">
 		<img src="images/idea5a.jpg" alt="the full list">
 		<img src="images/idea5b.jpg" alt="the hover state">
 		<img src="images/idea5c.jpg" alt="the character profile">
 		</div>
 	<h3>Meanwhile... the timeline</h3>
 	<p>The timeline sort of happened separately and much more quickly than the character profile. The first sketch I came up with I hated. The second was basically a winner for me. And that became the final state for the Time line the first design round.</p>
-		<div>
+		<div class="images">
 		<img src="images/Timeline1.jpg" alt="the full list">
 		<img src="images/Timeline2.jpg" alt="the hover state">
 		</div>
 	<h3>The First aha:Timeline</h3>
-		<div>
+		<div class="images">
 		<img src="images/Timeline3a.jpg" alt="the full list">
 		<img src="images/Timeline3b.jpg" alt="the hover state">
 		<img src="images/Timeline3c.jpg" alt="the character profile">
@@ -195,7 +195,7 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 	<h3>Feedback</h3>
 	<p>I was reminded that this is a maginificent film franchise, it should feel more spectacular than just some wiki page. These are some of the initial sketches I came up with. I tried making the motion and visual organization more interesting. I wasn't fully sold on these ideas though. </p>
 	<h3>Ideas</h3>
-		<div>
+		<div class="images">
 		<img src="images/TestingA.jpeg" alt="the full list">
 		<img src="images/TestingB.jpeg" alt="the hover state">
 		<img src="images/TestingBB.jpeg" alt="the character profile">
@@ -212,7 +212,7 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 		<img src="images/LooknFeel-Full-05.png" alt="the full list">
 		</div>
 	<h3>Site Map</h3>
-		<div>
+		<div class="images">
 		<img src="images/SiteMap-01.png" alt="the full list">
 		<img src="images/SiteMap-02.png" alt="the hover state">
 		<img src="images/SiteMap-03.png" alt="the character profile">
