--- a/marvelousprocesss/FirstConcept.html
+++ b/marvelousprocesss/FirstConcept.html
@@ -18,18 +18,17 @@
 		<ul id="menu">
 			<li id="space">  </li>
 			<li id="space">  </li>
-			<li><a href="" class="top">In The Beginning</a></li>
-			<li><a href="">Research</a></li>
-			<li><a href="">Production</a></li>
-			<li><a href="">First Concept</a></li>
-			<li><a href="">Phase 2</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/" class="top">In The Beginning</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Research">Research</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Production">Production</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">First Concept</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/PhaseTwo">Phase 2</a></li>
 			<li><a href="">The Cube</a></li>
 		</ul>
 	</li>
 	</ul>
 </nav>
 
-</section>
 
 
 
@@ -92,8 +91,8 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 		</div>
 
 
-	<button><a href="">Prev: Production</a></button>
-	<button><a href="">Next: Phase 2</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/Production">Prev: Production</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/PhaseTwo">Next: Phase 2</a></button>
 
 </article>
 </selection>
