--- a/marvelousprocesss/PhaseTwo.html
+++ b/marvelousprocesss/PhaseTwo.html
@@ -17,16 +17,18 @@
 		<ul id="menu">
 			<li id="space">  </li>
 			<li id="space">  </li>
-			<li><a href="" class="top">In The Beginning</a></li>
-			<li><a href="">Research</a></li>
-			<li><a href="">Production</a></li>
-			<li><a href="">First Concept</a></li>
-			<li><a href="">Phase 2</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/" class="top">In The Beginning</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Research">Research</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Production">Production</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">First Concept</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/PhaseTwo">Phase 2</a></li>
 			<li><a href="">The Cube</a></li>
 		</ul>
 	</li>
 	</ul>
 </nav>
+
+
 
 <section id="one">
 <a id="1"> </a>
@@ -37,54 +39,43 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 
 
 
-
-<section id="five">
-<a id="5"> </a>
+<section id="six">
+<a id="6"> </a>
 <article>
-	<h2>first concept</h2>
-	<h3>The initial sketching phase</h3>
-	<p>Here are the terrible first sketches I went through to get to the first tada moment. The following three are part of the first organization. Its the first full list, the hover statem and then full character profile.<br>This is also when I first attempted the colour pallet for franchises. I was definitely feeling that.</p>
+	<h2>Phase 2</h2>
+	<h3>Feedback</h3>
+	<p>I was reminded that this is a maginificent film franchise, it should feel more spectacular than just some wiki page. These are some of the initial sketches I came up with. I tried making the motion and visual organization more interesting. I wasn't fully sold on these ideas though. </p>
+	<h3>Ideas</h3>
 		<div class="images">
-		<img src="images/idea1a.jpg" alt="the full list">
-		<img src="images/idea1b.jpg" alt="the hover state">
-		<img src="images/idea1c.jpg" alt="the character profile">
-		<img src="images/idea2.jpg" alt="the character profile option 2">
-	</div>
-	<p>The following was the introduction of tabs. This was one of the original intents on tabed character profiles. I sort of liked it but not fully.</p>
-		<div class="images">
-		<img src="images/idea3a.jpg" alt="the full list">
-		<img src="images/idea3b.jpg" alt="the hover state">
-		<img src="images/idea3c.jpg" alt="the character profile">
-		</div>	
-	<p>Ideas for the character list choises changed. I tested the idea of duotones again here. but also tried to see how it worked without it. The Gif part was that once you select a person from the list, it opens up and plays a gif.</p>
-		<div class="images">
-		<img src="images/idea4a.jpg" alt="the full list">
-		<img src="images/idea4b.jpg" alt="the hover state">
-		<img src="images/idea4c.jpg" alt="the character profile">
+		<img src="images/TestingA.jpeg" alt="the full list">
+		<img src="images/TestingB.jpeg" alt="the hover state">
+		<img src="images/TestingBB.jpeg" alt="the character profile">
+		<img src="images/TestingBBB.jpeg" alt="the character profile">
+		<img src="images/TestingC.jpeg" alt="the character profile">
+		<img src="images/TestingCC.jpeg" alt="the character profile">
+		<img src="images/TestingCCC.jpeg" alt="the character profile">
 		</div>
-	<h3>The First aha moment</h3>
-	<p>Toying with tabs I finally arrived at this final design. The background was designed to subtly move while the png of the character and the text stayed the same.</p>
-		<div class="images">
-		<img src="images/idea5a.jpg" alt="the full list">
-		<img src="images/idea5b.jpg" alt="the hover state">
-		<img src="images/idea5c.jpg" alt="the character profile">
+	<h3>Feedback</h3>
+	<p>I was told it needed more connectivity that everything felt very separate. Lightbulbs went off in my head and and I got to designing. </p>
+	<h3>Full Page</h3>
+	<p>The idea of letting the user see the full website upon landing hit me. It gave the idea of depth and multitude of information. I thought it would zoom in when you land, into the film profile page and that from there you could navigate through the drop down menu. I also was inspired by a website I found that used hovering on edges to pull in the next page. So I thought what if the edges were the differnt pages of the website. and hovering on the edges pulled in the different pages.</p>
+		<div>
+		<img src="images/LooknFeel-Full-05.png" alt="the full list">
 		</div>
-	<h3>Meanwhile... the timeline</h3>
-	<p>The timeline sort of happened separately and much more quickly than the character profile. The first sketch I came up with I hated. The second was basically a winner for me. And that became the final state for the Time line the first design round.</p>
+	<h3>Site Map</h3>
 		<div class="images">
-		<img src="images/Timeline1.jpg" alt="the full list">
-		<img src="images/Timeline2.jpg" alt="the hover state">
+		<img src="images/SiteMap-01.png" alt="the full list">
+		<img src="images/SiteMap-02.png" alt="the hover state">
+		<img src="images/SiteMap-03.png" alt="the character profile">
+		<img src="images/SiteMap-04.png" alt="the character profile">
+		<img src="images/SiteMap-05.png" alt="the character profile">
+		<img src="images/SiteMap-06.png" alt="the character profile">
 		</div>
-	<h3>The First aha:Timeline</h3>
-		<div class="images">
-		<img src="images/Timeline3a.jpg" alt="the full list">
-		<img src="images/Timeline3b.jpg" alt="the hover state">
-		<img src="images/Timeline3c.jpg" alt="the character profile">
-		<img src="images/Timeline3d.jpg" alt="the character profile">
-		<img src="images/Timeline3e.jpg" alt="the character profile">
-		</div>
+	<h3>Feedback</h3>
+	<p>A friend of mine asked me to think for a moment what the lay out of using the edge navication would look like in real life as a 3 dimensional object. How would it function. If I went from page A>B what would replace A on the edges? So we thought long and hard about how this organization worked in 3 dimensions. The Cube was the answer. </p>
 
-	<button><a href="">Prev: First Concept</a></button>
+
+	<button><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">Prev: First Concept</a></button>
 	<button><a href="">Next: The Cube</a></button>
 
 
