--- a/marvelousprocesss/Production.html
+++ b/marvelousprocesss/Production.html
@@ -17,11 +17,11 @@
 		<ul id="menu">
 			<li id="space">  </li>
 			<li id="space">  </li>
-			<li><a href="" class="top">In The Beginning</a></li>
-			<li><a href="">Research</a></li>
-			<li><a href="">Production</a></li>
-			<li><a href="">First Concept</a></li>
-			<li><a href="">Phase 2</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/" class="top">In The Beginning</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Research">Research</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Production">Production</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">First Concept</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/PhaseTwo">Phase 2</a></li>
 			<li><a href="">The Cube</a></li>
 		</ul>
 	</li>
@@ -59,8 +59,8 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 		<!--<img src="images/AllCharacters.jpg" alt="The First Sketch">
 		<p> All the characters at once.</p>-->
 
-	<button><a href="">Prev: Research</a></button>
-	<button><a href="">Next: First Concept</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/Research">Prev: Research</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">Next: First Concept</a></button>
 
 </article>
 </selection>
