--- a/marvelousprocesss/Research.html
+++ b/marvelousprocesss/Research.html
@@ -17,11 +17,11 @@
 		<ul id="menu">
 			<li id="space">  </li>
 			<li id="space">  </li>
-			<li><a href="" class="top">In The Beginning</a></li>
-			<li><a href="">Research</a></li>
-			<li><a href="">Production</a></li>
-			<li><a href="">First Concept</a></li>
-			<li><a href="">Phase 2</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/" class="top">In The Beginning</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Research">Research</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Production">Production</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">First Concept</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/PhaseTwo">Phase 2</a></li>
 			<li><a href="">The Cube</a></li>
 		</ul>
 	</li>
@@ -88,8 +88,8 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 	<h4>why – infinity stones</h4>
 
 
-	<button><a href="">Prev: Beginning</a></button>
-	<button><a href="">Next: Production</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/">Prev: Beginning</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/Production">Next: Production</a></button>
 </article>
 </section>
 
