--- a/marvelousprocesss/index.html
+++ b/marvelousprocesss/index.html
@@ -42,16 +42,17 @@
 		<ul id="menu">
 			<li id="space">  </li>
 			<li id="space">  </li>
-			<li><a href="" class="top">In The Beginning</a></li>
-			<li><a href="">Research</a></li>
-			<li><a href="">Production</a></li>
-			<li><a href="">First Concept</a></li>
-			<li><a href="">Phase 2</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/" class="top">In The Beginning</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Research">Research</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/Production">Production</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">First Concept</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/PhaseTwo">Phase 2</a></li>
 			<li><a href="">The Cube</a></li>
 		</ul>
 	</li>
 	</ul>
 </nav>
+
 
 </section>
 
@@ -78,7 +79,7 @@ MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
 </video>
 
 
-	<button><a href="">Next: Research</a></button>
+	<button><a href="http://luciac.github.io/marvelousprocesss/Research">Next: Research</a></button>
 
 </article>
 </section>
