why you no work menu!?

--- a/marvelousprocesss/FirstConcept.html
+++ b/marvelousprocesss/FirstConcept.html
@@ -18,7 +18,7 @@
 		<ul id="menu">
 			<li id="space">  </li>
 			<li id="space">  </li>
-			<li><a href="http://luciac.github.io/marvelousprocesss/" class="top">In The Beginning</a></li>
+			<li><a href="http://luciac.github.io/marvelousprocesss/">In The Beginning</a></li>
 			<li><a href="http://luciac.github.io/marvelousprocesss/Research">Research</a></li>
 			<li><a href="http://luciac.github.io/marvelousprocesss/Production">Production</a></li>
 			<li><a href="http://luciac.github.io/marvelousprocesss/FirstConcept">First Concept</a></li>
@@ -32,7 +32,7 @@
 
 
 
-<section id="one">
+<section id="half">
 <a id="1"> </a>
 <h1>
 MAKING THE MARVEL CINEMATIC UNIVERSE INTERFACE
