--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,6 +19,9 @@
 <img src="images/dabloods.gif" alt="baboonsauce">
 <img src="images/Kurt.gif" alt="baboonsauce">
 <img src="images/Memento.gif" alt="baboonsauce">
+<img src="images/inception.gif" alt="baboonsauce">
+<img src="images/interstellar.gif" alt="baboonsauce">
+<img src="images/layering.gif" alt="baboonsauce">
 
 
 </body>
