WHY THE DUCK SAUCE DO YOU NOT UPLOAD

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,9 +20,9 @@
 <img src="images/dabloods.gif" alt="baboonsauce">
 <img src="images/Kurt.gif" alt="baboonsauce">
 <img src="images/Memento.gif" alt="baboonsauce">
-<img src="images/inception.gif" alt="baboonsauce">
-<img src="images/interstellar.gif" alt="baboonsauce">
-<img src="images/layering.gif" alt="baboonsauce">
+<img src="images/Inception.gif" alt="baboonsauce">
+<img src="images/Interstellar.gif" alt="baboonsauce">
+<img src="images/Layering.gif" alt="baboonsauce">
 
 
 </body>
