--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,6 +23,7 @@
 <img src="images/Inception.gif" alt="baboonsauce">
 <img src="images/Interstellar.gif" alt="baboonsauce">
 <img src="images/Layering.gif" alt="baboonsauce">
+<img src="images/zombs.gif" alt="baboonsauce">
 
 
 </body>
