--- a/purplepotato/index.html
+++ b/purplepotato/index.html
@@ -17,7 +17,7 @@
 <div id="iphone6">
 	<img src="paper.jpg" alt="backitup" id="backgr">
 
-	<img src="coupons.png" alt="coupons foreveryone" id="coups">
+	<img src="coupon.png" alt="coupons foreveryone" id="coups">
 </div>
 
 
