--- a/purplepotato/index.html
+++ b/purplepotato/index.html
@@ -15,9 +15,9 @@
 
 
 <div id="iphone6">
-	<img src="paper.jpg" alt="backitup" id="backgr">
+	<img src="images/paper.jpg" alt="backitup" id="backgr">
 
-	<img src="coupon.png" alt="coupons foreveryone" id="coups">
+	<img src="images/coupon.png" alt="coupons foreveryone" id="coups">
 </div>
 
 
