--- a/purplepotato/index.html
+++ b/purplepotato/index.html
@@ -17,7 +17,7 @@
 <div id="iphone6">
 	<img src="images/paper.jpg" alt="backitup" id="backgr">
 
-	<img src="images/coupon.png" alt="coupons foreveryone if you cant see this goddamnitwwhyyyy" id="coups">
+	<img src="images/Coupons.png" alt="coupons foreveryone if you cant see this goddamnitwwhyyyy" id="coups">
 </div>
 
 
