--- a/MassTinting/index.html
+++ b/MassTinting/index.html
@@ -5,7 +5,7 @@
 	<title>REALONE</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:700" rel="stylesheet">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -17,9 +17,11 @@
 </nav>
 
 <div class="headercontainer">
-	<div class="text">
-		<h1> Welcome to Mass Tinting</h1>
-		<h2>When you can't bear the glare...<br><br>Window Tinting for Homes, Offices, and Autos.</h2>
+	<div class="gradient">
+		<div class="text">
+			<h1> Welcome to Mass Tinting</h1>
+			<h2>When you can't bear the glare...<br><br>Window Tinting for Homes, Offices, and Autos.</h2>
+		</div>
 	</div>
 </div>
 
@@ -115,7 +117,7 @@
 			</div>
 			<div>
 				<label for="phone">Phone</label>
-				<input type="tel" id="phone" name="user_phone" placeholder="(012)-345-6789">
+				<input type="tel" id="phone" name="user_phone" placeholder="(314)-882-73868">
 			</div>
 			<div>
 				<label for="msg">Message</label>
@@ -137,7 +139,7 @@
 		<h4>Contact Us</h4>
 		<p>617.459.6860<br>info@masstinting.com</p>
 	</div>
-	<div class="column">
+	<div class="column about">
 		<h4>About Us</h4>
 		<p>Mass Tinting is a Massachusetts business specializing in tinting windows for businesses, homes, and autos.</p>
 	</div>
