close to final html

--- a/MassTinting/index.html
+++ b/MassTinting/index.html
@@ -20,7 +20,7 @@
 		<div class="gradient">
 			<div class="text">
 				<h1> Welcome to Mass Tinting</h1>
-				<h2>When you can't bear the glare...<br><br>Window Tinting for Homes, Offices, and Autos.</h2>
+				<h2>When you can't bear the glare...<br>Window Tinting for Homes, Offices, and Autos.</h2>
 			</div>
 		</div>
 	</div>
