--- a/easter/index.html
+++ b/easter/index.html
@@ -14,9 +14,9 @@
 		<div id="hero" class="background-thing">
 			<div id="hero-card" class="center">
 				<div class="hero-top">
-					<span class="progress">3/5</span>
+					<span class="progress">5/6</span>
 					<h1>FROM THE DESK OF<br>
-						<span>The Easter Bunny Jr.</span>
+						<span style="font-weight:900;">The Easter Bunny Jr.</span>
 					</h1>
 				</div>
 				<div class="hero-cta">
