--- a/easter/index.html
+++ b/easter/index.html
@@ -4,7 +4,6 @@
 		<title>Easter Scavenger Hunt</title>
 		<meta name="description" content="Scavenger hunt">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- <meta name="viewport" content="width=320, initial-scale=1"> -->
 		<meta name="keywords" content="Scavenger hunt">
 		<link rel="stylesheet" href="riddles.css">		
 		<script type="text/javascript" src="riddles.js" defer></script>
@@ -14,9 +13,9 @@
 		<div id="hero" class="background-thing">
 			<div id="hero-card" class="center">
 				<div class="hero-top">
-					<span class="progress">5/6</span>
+					<span class="progress">3/5</span>
 					<h1>FROM THE DESK OF<br>
-						<span style="font-weight:900;">The Easter Bunny Jr.</span>
+						<span>The Easter Bunny Jr.</span>
 					</h1>
 				</div>
 				<div class="hero-cta">
@@ -68,7 +67,7 @@
 		<!-- end #riddle-content -->
 
 
-		<button id="clue-button" >Open Clue</button>
+		<button id="clue-button" disabled>Open Clue</button>
 
 		<!-- The Modal -->
 		<div id="easter-modal" class="modal">
