--- a/luciaconchellodotcom/index.html
+++ b/luciaconchellodotcom/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Letters of ignorance</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
