--- a/luciaconchellodotcom/about.html
+++ b/luciaconchellodotcom/about.html
@@ -45,7 +45,7 @@
 
 <div id="bodycontainer" class="about">
 	<div class="image about top">
-		<img src="images/Self-Portrait.jpg" alt="me,vomiting out random cartoons">
+		<img src="images/Self-portrait.jpg" alt="me,vomiting out random cartoons">
 	</div>
 	<div class="abouttext">
 		<div class="text">
