ugh there were twoooo
bastards

--- a/luciaconchellodotcom/about.html
+++ b/luciaconchellodotcom/about.html
@@ -70,7 +70,7 @@
 		</div>
 	</div>
 	<div class="image about side">
-		<img src="images/Self-Portrait.jpg" alt="me,vomiting out random cartoons">
+		<img src="images/Self-portrait.jpg" alt="me,vomiting out random cartoons">
 	</div>
 </div>
 
