i might be a genius
like for reals tho.

--- a/luciaconchellodotcom/wayne.html
+++ b/luciaconchellodotcom/wayne.html
@@ -13,12 +13,12 @@
 
 <div id="sidenav">
 	<div id="sidenavscrollable">
-		<a href=""><img src="images/lucialogo.png" class="logo mobile"></a>
+		<a href="index.html"><img src="images/lucialogo.png" class="logo mobile"></a>
 		<a href=""><h1>Graphic Design Projects</h1></a>
 			<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
 			<a href="" class="gdproj"><h2>Zombies</h2></a>
 			<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
-			<a href="" class="gdproj"><h2>Letters of Ignorance</h2></a>
+			<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 			<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 			<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
 			<a href="http://www.luciac.github.io/portfolio/typeface" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
