--- a/luciaconchellodotcom/about.html
+++ b/luciaconchellodotcom/about.html
@@ -17,12 +17,12 @@
 			<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
 			<a href="" class="gdproj"><h2>Zombies</h2></a>
 			<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
-			<a href="" class="gdproj"><h2>Letters of Ignorance</h2></a>
+			<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 			<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 			<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
 			<a href="http://www.luciac.github.io/portfolio/typeface" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
 			<a href="" class="gdproj"><h2>The Mustache App</h2></a>
-			<a href="1950.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
+			<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 			<br>
 		<a href=""><h1>Design Side Notes</h1></a>
 		<a href=""><h1>Illustration</h1></a>
@@ -45,7 +45,7 @@
 
 <div id="bodycontainer" class="about">
 	<div class="image about top">
-		<img src="images/Self-portrait.jpg" alt="me,vomiting out random cartoons">
+		<img src="images/Self-Portrait.jpg" alt="me,vomiting out random cartoons">
 	</div>
 	<div class="abouttext">
 		<div class="text">
@@ -70,7 +70,7 @@
 		</div>
 	</div>
 	<div class="image about side">
-		<img src="images/Self-portrait.jpg" alt="me,vomiting out random cartoons">
+		<img src="images/Self-Portrait.jpg" alt="me,vomiting out random cartoons">
 	</div>
 </div>
 
